CORE-39934: mobile menu overflow issue.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_supercategory-menu.scss
@@ -68,6 +68,10 @@
 
   .block-alshaya-super-category-menu {
     .menu--one__list li {
+      @include breakpoint($upto-desktop) {
+        overflow: hidden;
+      }
+
       &:last-child {
         a::after {
           display: none;
